# ProofStruct

./: .gitignore  LICENSE  ProofStruct.lean  README.md  README.zh.md  environment.yml  lake-manifest.json  lakefile.toml  proofstruct_config.example.toml  pyproject.toml  requirements.txt
ProofStruct/: FileMain.lean  LayeredMain.lean  Main.lean
ProofStruct/Extract/: DepPass.lean  Graph.lean  InfoPass.lean  Json.lean  Layered.lean  SyntaxPass.lean
ProofStruct/Widget/: BlueprintJson.lean  BlueprintLayeredGraph.lean  Command.lean  LayeredJson.lean  RenderGraphDisplay.lean  RenderLayeredDisplay.lean  Types.lean
examples/: example.lean
prompts/: english_evidence_graph.md  english_plan_graph.md
scripts/ProofStruct/: batch_extract.py  english_blueprint.py  layered_blueprint.py  safety.py
widget/: blueprintLayeredGraph.js
